--- a/ui/login.ui
+++ b/ui/login.ui
@@ -195,6 +195,9 @@ QLabel{
         <height>31</height>
        </rect>
       </property>
+      <property name="echoMode">
+       <enum>QLineEdit::Password</enum>
+      </property>
      </widget>
      <widget class="QLabel" name="label_userName_2">
       <property name="geometry">
